--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "./bundles/ngx-sherlock.umd.js",
   "typings": "./ngx-sherlock.d.ts",
   "scripts": {
+    "prepack": "npm run build",
     "test": "node ./tasks/test",
     "build": "npm run test && node ./tasks/build",
     "g": "node ./node_modules/angular-librarian",
@@ -14,7 +15,9 @@
     "posttagVersion": "npm run build && npm publish dist",
     "prebuild": "rimraf dist out-tsc",
     "start": "webpack-dev-server --open --config ./webpack/webpack.dev.js",
-    "tagVersion": "np --no-publish"
+    "tagVersion": "np --no-publish",
+    "ci:travis": "npm run build && cat coverage/lcov.info | node_modules/.bin/coveralls",
+    "ci:circle": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -47,6 +50,7 @@
     "angular2-template-loader": "0.6.0",
     "awesome-typescript-loader": "^3.0.0",
     "codelyzer": "~3.0.0",
+    "coveralls": "^3.0.0",
     "css-loader": "^0.26.1",
     "css-to-string-loader": "^0.1.3",
     "extract-text-webpack-plugin": "^2.1.0",
