Fixes library build for a scoped package. (#1)

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "prepack": "npm run build",
     "test": "node ./tasks/test",
-    "build": "npm run test && node ./tasks/build",
+    "build": "npm run test && node ./tasks/build && shx mv dist/@politie dist/politie",
     "g": "node ./node_modules/angular-librarian",
     "lint": "tslint ./src/**/*.ts",
     "postbuild": "rimraf build",
