--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "@angular/common": "^5.0.2",
     "@angular/compiler": "^5.0.2",
     "@angular/core": "^5.0.2",
+    "@angular/forms": "^5.0.2",
     "@angular/platform-browser": "^5.0.2",
     "@angular/platform-browser-dynamic": "^5.0.2",
     "@politie/informant": "^1.0.0-beta.0",
