--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "sass-loader": "^6.0.6",
     "script-loader": "^0.7.0",
     "semver": "5.4.1",
+    "shx": "^0.2.2",
     "source-map-loader": "^0.2.3",
     "style-loader": "^0.19.0",
     "tslint": "^5.0.0",
