--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "file-loader": "^1.1.5",
     "fs-extra": "^4.0.2",
     "html-webpack-plugin": "^2.19.0",
+    "immutable": "^3.8.2",
     "istanbul-instrumenter-loader": "^3.0.0",
     "jasmine-core": "2.8.0",
     "jasmine-spec-reporter": "4.2.1",
