--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "file-loader": "^1.1.5",
     "fs-extra": "^4.0.2",
     "html-webpack-plugin": "^2.19.0",
+    "immutable": "^3.8.2",
     "istanbul-instrumenter-loader": "^3.0.0",
     "jasmine-core": "2.8.0",
     "jasmine-spec-reporter": "4.2.1",
@@ -77,6 +78,7 @@
     "sass-loader": "^6.0.6",
     "script-loader": "^0.7.0",
     "semver": "5.4.1",
+    "shx": "^0.2.2",
     "source-map-loader": "^0.2.3",
     "style-loader": "^0.19.0",
     "tslint": "^5.0.0",
@@ -96,6 +98,7 @@
     "@angular/common": "^5.0.2",
     "@angular/compiler": "^5.0.2",
     "@angular/core": "^5.0.2",
+    "@angular/forms": "^5.0.2",
     "@angular/platform-browser": "^5.0.2",
     "@angular/platform-browser-dynamic": "^5.0.2",
     "@politie/informant": "^1.0.0-beta.0",
