--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@politie/ngx-sherlock",
-  "version": "1.0.0-beta.1",
-  "description": "ngx-sherlock is an Angular tooling library to be used with the @politie/sherlock distributed reactive state management library.",
+  "version": "1.0.0-beta.4",
+  "description": "NgxSherlock is a library with angular bindings for the Sherlock reacive state library.",
   "private": false,
   "main": "./bundles/ngx-sherlock.umd.js",
   "typings": "./ngx-sherlock.d.ts",
   "scripts": {
     "test": "node ./tasks/test",
-    "build": "npm run test && node ./tasks/build && shx mv dist/@politie dist/politie",
+    "build": "npm run test && node ./tasks/build",
     "g": "node ./node_modules/angular-librarian",
     "lint": "tslint ./src/**/*.ts",
     "postbuild": "rimraf build",
@@ -38,32 +38,32 @@
     "Merijn van der Linden <njirem@gmail.com>",
     "Wouter Spaak <w.spaak@gmail.com>"
   ],
-  "license": "Apache-2.0",
+  "license": "ISC",
   "bugs": {
     "url": "https://github.com/politie/ngx-sherlock/issues"
   },
   "homepage": "https://github.com/politie/ngx-sherlock#readme",
   "devDependencies": {
-    "@angular/compiler-cli": "^5.0.2",
+    "@angular/compiler-cli": "^4.0.0",
     "@politie/sherlock-proxy": "^1.0.0-beta.0",
-    "@types/jasmine": "2.8.2",
-    "@types/node": "^8.0.53",
+    "@types/jasmine": "2.5.38",
+    "@types/node": "^6.0.42",
     "angular-librarian": "1.0.0-beta.14",
-    "angular2-template-loader": "0.6.2",
+    "angular2-template-loader": "0.6.0",
     "awesome-typescript-loader": "^3.0.0",
-    "codelyzer": "~4.0.1",
+    "codelyzer": "~3.0.0",
     "coveralls": "^3.0.0",
-    "css-loader": "^0.28.7",
+    "css-loader": "^0.26.1",
     "css-to-string-loader": "^0.1.3",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^1.1.5",
-    "fs-extra": "^4.0.2",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^0.8.5",
+    "fs-extra": "^2.1.2",
     "html-webpack-plugin": "^2.19.0",
     "immutable": "^3.8.2",
-    "istanbul-instrumenter-loader": "^3.0.0",
-    "jasmine-core": "2.8.0",
-    "jasmine-spec-reporter": "4.2.1",
-    "karma": "1.7.1",
+    "istanbul-instrumenter-loader": "^1.2.0",
+    "jasmine-core": "2.5.2",
+    "jasmine-spec-reporter": "2.5.0",
+    "karma": "1.2.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-coverage-istanbul-reporter": "^1.3.0",
     "karma-jasmine": "^1.0.2",
@@ -71,43 +71,45 @@
     "karma-webpack": "^2.0.0",
     "node-sass": "^4.1.1",
     "np": "^2.12.0",
+    "phantomjs-prebuilt": "^2.1.7",
     "raw-loader": "^0.5.1",
     "rimraf": "^2.5.3",
-    "rollup": "0.52.0",
+    "rollup": "0.43.0",
     "rollup-plugin-commonjs": "^8.0.2",
+    "rollup-plugin-node-builtins": "^2.1.2",
+    "rollup-plugin-node-globals": "^1.1.0",
     "rollup-plugin-node-resolve": "3.0.0",
     "rollup-plugin-sourcemaps": "0.4.2",
     "rollup-plugin-uglify": "2.0.1",
-    "sass-loader": "^6.0.6",
+    "sass-loader": "^4.0.1",
     "script-loader": "^0.7.0",
-    "semver": "5.4.1",
+    "semver": "5.3.0",
     "shx": "^0.2.2",
-    "source-map-loader": "^0.2.3",
-    "style-loader": "^0.19.0",
+    "source-map-loader": "^0.1.5",
+    "style-loader": "^0.13.1",
     "tslint": "^5.0.0",
     "tslint-loader": "^3.0.0",
-    "typescript": "~2.6.1",
-    "typings": "^2.1.1",
-    "url-loader": "^0.6.2",
-    "webpack": "^3.8.1",
+    "typescript": "^2.6.2",
+    "typings": "^0.8.1",
+    "url-loader": "^0.5.7",
+    "webpack": "^2.2.0",
     "webpack-dev-server": "^2.2.0",
-    "webpack-merge": "^4.1.1",
+    "webpack-merge": "^0.14.0",
     "webpack-node-externals": "^1.5.4"
   },
   "module": "./@politie/ngx-sherlock.es5.js",
   "es2015": "./@politie/ngx-sherlock.js",
   "author": "",
   "dependencies": {
-    "@angular/common": "^5.0.2",
-    "@angular/compiler": "^5.0.2",
-    "@angular/core": "^5.0.2",
-    "@angular/forms": "^5.0.2",
-    "@angular/platform-browser": "^5.0.2",
-    "@angular/platform-browser-dynamic": "^5.0.2",
-    "@politie/informant": "^1.0.0-beta.0",
-    "@politie/sherlock": "^1.0.0-beta.0",
+    "@angular/common": "^4.0.0",
+    "@angular/compiler": "^4.0.0",
+    "@angular/core": "^4.0.0",
+    "@angular/platform-browser": "^4.0.0",
+    "@angular/platform-browser-dynamic": "^4.0.0",
+    "@politie/informant": "^1.0.0-beta.3",
+    "@politie/sherlock": "^1.0.0-beta.2",
     "core-js": "^2.4.1",
     "rxjs": "^5.0.1",
-    "zone.js": "0.8.18"
+    "zone.js": "0.8.12"
   }
 }
