--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "karma-webpack": "^2.0.0",
     "node-sass": "^4.1.1",
     "np": "^2.12.0",
+    "npm-run-all": "^4.1.2",
     "phantomjs-prebuilt": "^2.1.7",
     "raw-loader": "^0.5.1",
     "rimraf": "^2.5.3",
