Adding an integration app with some tests.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "typings": "./ngx-sherlock.d.ts",
   "scripts": {
     "test": "node ./tasks/test",
-    "build": "npm run test && node ./tasks/build",
+    "build": "node ./tasks/build",
     "g": "node ./node_modules/angular-librarian",
     "lint": "tslint ./src/**/*.ts",
     "postbuild": "rimraf build",
@@ -82,8 +82,6 @@
     "rimraf": "^2.5.3",
     "rollup": "0.43.0",
     "rollup-plugin-commonjs": "^8.0.2",
-    "rollup-plugin-node-builtins": "^2.1.2",
-    "rollup-plugin-node-globals": "^1.1.0",
     "rollup-plugin-node-resolve": "3.0.0",
     "rollup-plugin-sourcemaps": "0.4.2",
     "rollup-plugin-uglify": "2.0.1",
@@ -95,13 +93,14 @@
     "style-loader": "^0.13.1",
     "tslint": "^5.0.0",
     "tslint-loader": "^3.0.0",
-    "typescript": "^2.6.2",
+    "typescript": "~2.2.1",
     "typings": "^0.8.1",
     "url-loader": "^0.5.7",
     "webpack": "^2.2.0",
     "webpack-dev-server": "^2.2.0",
     "webpack-merge": "^0.14.0",
-    "webpack-node-externals": "^1.5.4"
+    "webpack-node-externals": "^1.5.4",
+    "karma-phantomjs-launcher": "^1.0.2"
   },
   "module": "./@politie/ngx-sherlock.es5.js",
   "es2015": "./@politie/ngx-sherlock.js",
