--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,15 +4,11 @@
         "skipTemplateCodegen": true
     },
     "compilerOptions": {
-        "skipLibCheck": true,
         "baseUrl": "",
         "declaration": true,
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
-        "lib": [
-            "es2015",
-            "dom"
-        ],
+        "lib": ["es2015", "dom"],
         "mapRoot": "./",
         "module": "es2015",
         "moduleResolution": "node",
