--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,11 @@
         "declaration": true,
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
-        "lib": ["es2015", "dom"],
+        "lib": [
+            "es2015",
+            "dom"
+        ],
+        "skipLibCheck": true,
         "mapRoot": "./",
         "module": "es2015",
         "moduleResolution": "node",
