--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "typings": "./ngx-sherlock.d.ts",
   "scripts": {
     "test": "node ./tasks/test",
-    "build": "node ./tasks/build",
+    "build": "npm run test && node ./tasks/build",
     "g": "node ./node_modules/angular-librarian",
     "lint": "tslint ./src/**/*.ts",
     "postbuild": "rimraf build",
@@ -93,14 +93,13 @@
     "style-loader": "^0.13.1",
     "tslint": "^5.0.0",
     "tslint-loader": "^3.0.0",
-    "typescript": "~2.2.1",
+    "typescript": "^2.6.2",
     "typings": "^0.8.1",
     "url-loader": "^0.5.7",
     "webpack": "^2.2.0",
     "webpack-dev-server": "^2.2.0",
     "webpack-merge": "^0.14.0",
-    "webpack-node-externals": "^1.5.4",
-    "karma-phantomjs-launcher": "^1.0.2"
+    "webpack-node-externals": "^1.5.4"
   },
   "module": "./@politie/ngx-sherlock.es5.js",
   "es2015": "./@politie/ngx-sherlock.js",
