--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,9 @@ jobs:
           keys:
           - v1-dependencies-{{ checksum "package-lock.json" }}
 
+      # There's a bug in npm 5.5.* with directories with an @-symbol. See: https://github.com/npm/npm/issues/18982
+      - run: npm install -g npm@5.6.0
+
       - run: npm install
 
       - save_cache:
