--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,11 @@ jobs:
           - v1-dependencies-{{ checksum "package-lock.json" }}
 
       # There's a bug in npm 5.5.* with directories with an @-symbol. See: https://github.com/npm/npm/issues/18982
-      - run: npm install -g npm@5.6.0
+      - run:
+          name: "Checking versions"
+          command: |
+            node --version
+            npm --version
 
       - run: npm install
 
