--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
           name: "Checking versions"
           command: |
             node --version
-            npm --version
+            npm --verson
 
       - run: npm install
 
