--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,6 +22,11 @@ jobs:
             node --version
             npm --verson
 
+      - run:
+          name: "Forcing npm update"
+          command: |
+            sudo npm i -g npm@5.6.0
+
       - run: npm install
 
       - save_cache:
