--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/node:8-browsers
+      - image: circleci/node:7-browsers
 
     working_directory: ~/repo
 
@@ -11,28 +11,16 @@ jobs:
       - checkout
 
       # Download and cache dependencies
-      # - restore_cache:
-      #     keys:
-      #     - v1-dependencies-{{ checksum "package-lock.json" }}
-
-      # There's a bug in npm 5.5.* with directories with an @-symbol. See: https://github.com/npm/npm/issues/18982
-      - run:
-          name: "Checking versions"
-          command: |
-            node --version
-            npm --version
-
-      - run:
-          name: "Forcing npm update"
-          command: |
-            sudo npm i -g npm@5.6.0
+      - restore_cache:
+          keys:
+          - v1-dependencies-{{ checksum "package-lock.json" }}
 
       - run: npm install
 
-      # - save_cache:
-      #     paths:
-      #       - node_modules
-      #     key: v1-dependencies-{{ checksum "package-lock.json" }}
+      - save_cache:
+          paths:
+            - node_modules
+          key: v1-dependencies-{{ checksum "package-lock.json" }}
 
       # run tests!
       - run: npm run ci:circle
