--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
   "typings": "./ngx-sherlock.d.ts",
   "scripts": {
     "test": "node ./tasks/test",
-    "build": "npm run test && node ./tasks/build",
+    "build": "node ./tasks/build",
     "g": "node ./node_modules/angular-librarian",
     "lint": "tslint ./src/**/*.ts",
     "postbuild": "rimraf build",
     "posttagVersion": "npm run build && npm publish dist",
     "prebuild": "rimraf dist out-tsc",
     "start": "webpack-dev-server --open --config ./webpack/webpack.dev.js",
-    "tagVersion": "np --no-publish",
+    "tagVersion": "node ./tasks/tag-version",
     "ci:travis": "npm run build && cat coverage/lcov.info | node_modules/.bin/coveralls",
     "ci:circle": "npm run build"
   },
@@ -44,56 +44,57 @@
   },
   "homepage": "https://github.com/politie/ngx-sherlock#readme",
   "devDependencies": {
-    "@angular/compiler-cli": "^4.0.0",
-    "@politie/sherlock-proxy": "^1.0.0-beta.0",
-    "@types/jasmine": "2.5.38",
-    "@types/node": "^6.0.42",
-    "angular-librarian": "1.0.0-beta.14",
+    "@angular/compiler-cli": "^5.0.0",
+    "@politie/sherlock-proxy": "^1.0.0-beta.4",
+    "@types/jasmine": "^2.8.6",
+    "@types/node": "^8.0.0",
+    "angular-librarian": "1.0.0",
     "angular2-template-loader": "0.6.0",
-    "awesome-typescript-loader": "^3.0.0",
-    "codelyzer": "~3.0.0",
+    "awesome-typescript-loader": "^3.5.0",
+    "codelyzer": "^4.0.0",
     "coveralls": "^3.0.0",
-    "css-loader": "^0.26.1",
-    "css-to-string-loader": "^0.1.3",
-    "extract-text-webpack-plugin": "^2.1.0",
-    "file-loader": "^0.8.5",
+    "css-loader": "^0.28.0",
+    "css-to-string-loader": "^0.1.0",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "file-loader": "^1.0.0",
     "fs-extra": "^2.1.2",
-    "html-webpack-plugin": "^2.19.0",
+    "html-webpack-plugin": "^2.0.0",
     "immutable": "^3.8.2",
-    "istanbul-instrumenter-loader": "^1.2.0",
-    "jasmine-core": "2.5.2",
-    "jasmine-spec-reporter": "2.5.0",
-    "karma": "1.2.0",
+    "istanbul-instrumenter-loader": "^3.0.0",
+    "jasmine-core": "^2.99.1",
+    "jasmine-spec-reporter": "^4.0.0",
+    "karma": "^1.7.1",
     "karma-chrome-launcher": "^2.0.0",
-    "karma-coverage-istanbul-reporter": "^1.3.0",
-    "karma-jasmine": "^1.0.2",
+    "karma-coverage-istanbul-reporter": "^1.4.1",
+    "karma-jasmine": "^1.1.1",
+    "karma-phantomjs-launcher": "^1.0.2",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^2.0.0",
-    "node-sass": "^4.1.1",
-    "np": "^2.12.0",
+    "karma-webpack": "^2.0.13",
+    "node-sass": "^4.7.2",
+    "np": "^2.20.1",
     "phantomjs-prebuilt": "^2.1.7",
     "raw-loader": "^0.5.1",
     "rimraf": "^2.5.3",
-    "rollup": "0.43.0",
-    "rollup-plugin-commonjs": "^8.0.2",
+    "rollup": "0.52.1",
+    "rollup-plugin-commonjs": "^8.4.1",
     "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-node-globals": "^1.1.0",
     "rollup-plugin-node-resolve": "3.0.0",
     "rollup-plugin-sourcemaps": "0.4.2",
     "rollup-plugin-uglify": "2.0.1",
-    "sass-loader": "^4.0.1",
+    "sass-loader": "^6.0.0",
     "script-loader": "^0.7.0",
-    "semver": "5.3.0",
+    "semver": "^5.5.0",
     "shx": "^0.2.2",
-    "source-map-loader": "^0.1.5",
-    "style-loader": "^0.13.1",
-    "tslint": "^5.0.0",
-    "tslint-loader": "^3.0.0",
-    "typescript": "^2.6.2",
+    "source-map-loader": "^0.2.0",
+    "style-loader": "^0.19.0",
+    "tslint": "^5.9.1",
+    "tslint-loader": "^3.6.0",
+    "typescript": "~    2.4.2",
     "typings": "^0.8.1",
-    "url-loader": "^0.5.7",
-    "webpack": "^2.2.0",
-    "webpack-dev-server": "^2.2.0",
+    "url-loader": "^0.6.2",
+    "webpack": "^3.0.0",
+    "webpack-dev-server": "^2.11.2",
     "webpack-merge": "^0.14.0",
     "webpack-node-externals": "^1.5.4"
   },
@@ -101,15 +102,15 @@
   "es2015": "./@politie/ngx-sherlock.js",
   "author": "",
   "dependencies": {
-    "@angular/common": "^4.0.0",
-    "@angular/compiler": "^4.0.0",
-    "@angular/core": "^4.0.0",
-    "@angular/platform-browser": "^4.0.0",
-    "@angular/platform-browser-dynamic": "^4.0.0",
-    "@politie/informant": "^1.0.0-beta.3",
-    "@politie/sherlock": "^1.0.0-beta.2",
-    "core-js": "^2.4.1",
-    "rxjs": "^5.0.1",
-    "zone.js": "0.8.12"
+    "@angular/common": "^5.0.0",
+    "@angular/compiler": "^5.0.0",
+    "@angular/core": "^5.0.0",
+    "@angular/platform-browser": "^5.0.0",
+    "@angular/platform-browser-dynamic": "^5.0.0",
+    "@politie/informant": "^1.0.0-beta.5",
+    "@politie/sherlock": "^1.0.0-beta.4",
+    "core-js": "^2.5.3",
+    "rxjs": "^5.5.6",
+    "zone.js": "^0.8.14"
   }
 }
