--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lint": "tslint ./src/**/*.ts",
     "postbuild": "rimraf build",
     "posttagVersion": "npm run build && npm publish dist",
-    "prebuild": "rimraf dist out-tsc",
+    "prebuild": "rimraf dist out-tsc && npm run test",
     "start": "webpack-dev-server --open --config ./webpack/webpack.dev.js",
     "tagVersion": "node ./tasks/tag-version",
     "ci:travis": "npm run build && cat coverage/lcov.info | node_modules/.bin/coveralls",
@@ -90,7 +90,7 @@
     "style-loader": "^0.19.0",
     "tslint": "^5.9.1",
     "tslint-loader": "^3.6.0",
-    "typescript": "~    2.4.2",
+    "typescript": "~2.7.2",
     "typings": "^0.8.1",
     "url-loader": "^0.6.2",
     "webpack": "^3.0.0",
