--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: node_js
 node_js:
-  - "6"
-  - "7"
-  - "8"
   - "node"
+sudo: required
+addons:
+  chrome: stable
 script: npm run ci:travis
 cache:
   directories:
