--- a/projects/politie/ngx-sherlock/package.json
+++ b/projects/politie/ngx-sherlock/package.json
@@ -2,9 +2,9 @@
     "name": "@politie/ngx-sherlock",
     "version": "2.0.0-alpha.0",
     "peerDependencies": {
-        "@angular/common": "^6.0.0-rc.0 || ^6.0.0",
-        "@angular/core": "^6.0.0-rc.0 || ^6.0.0",
-        "@politie/sherlock": "^2.0.0-rc.1 || ^2.0.0"
+        "@angular/common": ">=6",
+        "@angular/core": ">=6",
+        "@politie/sherlock": ">=2.0.0-rc.0"
     },
     "contributors": [
         "Paco van der Linden <pavadeli@gmail.com>",
