--- a/projects/politie/ngx-sherlock/package.json
+++ b/projects/politie/ngx-sherlock/package.json
@@ -4,7 +4,8 @@
     "peerDependencies": {
         "@angular/common": ">=6",
         "@angular/core": ">=6",
-        "@politie/sherlock": ">=2.0.0-rc.0"
+        "@politie/sherlock": ">=2.0.0-rc.0",
+        "@politie/sherlock-rxjs": ">=2.0.0-rc.0"
     },
     "contributors": [
         "Paco van der Linden <pavadeli@gmail.com>",
