--- a/package.json
+++ b/package.json
@@ -18,31 +18,30 @@
     },
     "private": true,
     "dependencies": {
-        "@angular/animations": "^7.2.15",
-        "@angular/common": "^7.2.15",
-        "@angular/compiler": "^7.2.15",
-        "@angular/core": "^7.2.15",
-        "@angular/forms": "^7.2.15",
-        "@angular/http": "^7.2.15",
-        "@angular/platform-browser": "^7.2.15",
-        "@angular/platform-browser-dynamic": "^7.2.15",
-        "@angular/router": "^7.2.15",
+        "@angular/animations": "^8.0.0",
+        "@angular/common": "^8.0.0",
+        "@angular/compiler": "^8.0.0",
+        "@angular/core": "^8.0.0",
+        "@angular/forms": "^8.0.0",
+        "@angular/platform-browser": "^8.0.0",
+        "@angular/platform-browser-dynamic": "^8.0.0",
+        "@angular/router": "^8.0.0",
         "@politie/sherlock": "^2.0.0-rc.2",
         "@politie/sherlock-proxy": "^2.0.0-rc.2",
-        "core-js": "^2.6.5",
+        "core-js": "^3.1.3",
         "rxjs": "~6.5.2",
         "zone.js": "~0.9.1"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "~0.13.9",
-        "@angular-devkit/build-ng-packagr": "~0.13.9",
-        "@angular/cli": "~7.3.9",
-        "@angular/compiler-cli": "^7.2.15",
-        "@angular/language-service": "^7.2.15",
-        "@types/jasmine": "~3.3.12",
+        "@angular-devkit/build-angular": "~0.800.0",
+        "@angular-devkit/build-ng-packagr": "~0.800.0",
+        "@angular/cli": "~8.0.1",
+        "@angular/compiler-cli": "^8.0.0",
+        "@angular/language-service": "^8.0.0",
+        "@types/jasmine": "~3.3.13",
         "@types/jasminewd2": "~2.0.6",
-        "@types/node": "~12.0.0",
-        "codelyzer": "~5.0.1",
+        "@types/node": "~12.0.4",
+        "codelyzer": "^5.0.1",
         "coveralls": "^3.0.3",
         "jasmine-core": "~3.4.0",
         "jasmine-spec-reporter": "~4.2.1",
@@ -51,14 +50,14 @@
         "karma-coverage-istanbul-reporter": "~2.0.5",
         "karma-jasmine": "~2.0.1",
         "karma-jasmine-html-reporter": "^1.4.2",
-        "ng-packagr": "^5.1.0",
+        "ng-packagr": "^5.2.0",
         "npm-run-all": "^4.1.5",
         "protractor": "~5.4.2",
         "rimraf": "^2.6.3",
         "ts-node": "~8.2.0",
         "tsickle": "0.35.0",
         "tslib": "^1.9.3",
-        "tslint": "~5.16.0",
-        "typescript": "~3.2.4"
+        "tslint": "~5.17.0",
+        "typescript": "~3.4.5"
     }
 }
