Fix .vscode settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "editor.formatOnSave": true,
-    "tslint.autoFixOnSave": true,
+    "editor.codeActionsOnSave": {
+        "source.fixAll": true,
+    },
     "html.format.wrapAttributes": "aligned-multiple",
     "html.format.wrapLineLength": 150,
     "typescript.tsdk": "node_modules/typescript/lib"
