--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@angular/router": "^8.0.0",
         "@politie/sherlock": "^2.0.0-rc.2",
         "@politie/sherlock-proxy": "^2.0.0-rc.2",
+        "@politie/sherlock-rxjs": "^2.0.0-rc.2",
         "core-js": "^3.1.3",
         "rxjs": "~6.5.2",
         "zone.js": "~0.9.1"
