--- a/projects/politie/ngx-sherlock/package.json
+++ b/projects/politie/ngx-sherlock/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@politie/ngx-sherlock",
-    "version": "2.0.0-alpha.0",
+    "version": "2.0.0",
     "peerDependencies": {
         "@angular/common": ">=6",
         "@angular/core": ">=6",
