upgraded to angular 9

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,5 +31,8 @@
                 "dist/politie/ngx-sherlock/*"
             ]
         }
+    },
+    "angularCompilerOptions": {
+        "enableIvy": false
     }
 }
