--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-sherlock-dev",
-  "version": "2.0.0",
+  "version": "2.1.0",
   "scripts": {
     "start": "FORCE_COLOR=1 npm-run-all -l -p watch:*",
     "watch:lib": "ng build @politie/ngx-sherlock --watch",
@@ -19,31 +19,32 @@
   "private": true,
   "license": "Apache-2.0",
   "dependencies": {
-    "@angular/animations": "^8.0.0",
-    "@angular/common": "^8.0.0",
-    "@angular/compiler": "^8.0.0",
-    "@angular/core": "^8.0.0",
-    "@angular/forms": "^8.0.0",
-    "@angular/platform-browser": "^8.0.0",
-    "@angular/platform-browser-dynamic": "^8.0.0",
-    "@angular/router": "^8.0.0",
-    "@politie/sherlock": "^2.0.0-rc.2",
-    "@politie/sherlock-proxy": "^2.0.0-rc.2",
-    "@politie/sherlock-rxjs": "^2.0.0-rc.2",
-    "core-js": "^3.1.3",
-    "rxjs": "~6.5.2",
-    "zone.js": "~0.9.1"
+    "@angular/animations": "^9.1.13",
+    "@angular/common": "^9.1.13",
+    "@angular/compiler": "^9.1.13",
+    "@angular/core": "^9.1.13",
+    "@angular/forms": "^9.1.13",
+    "@angular/platform-browser": "^9.1.13",
+    "@angular/platform-browser-dynamic": "^9.1.13",
+    "@angular/router": "^9.1.13",
+    "@politie/sherlock": "^3.1.0",
+    "@politie/sherlock-proxy": "^3.1.0",
+    "@politie/sherlock-rxjs": "^3.1.0",
+    "core-js": "^3.14.0",
+    "rxjs": "~6.6.7",
+    "tslib": "^2.3.0",
+    "zone.js": "^0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.29",
-    "@angular-devkit/build-ng-packagr": "~0.803.29",
-    "@angular/cli": "~8.3.29",
-    "@angular/compiler-cli": "^8.0.0",
-    "@angular/language-service": "^8.0.0",
+    "@angular-devkit/build-angular": "~0.901.15",
+    "@angular-devkit/build-ng-packagr": "~0.901.15",
+    "@angular/cli": "~9.1.15",
+    "@angular/compiler-cli": "^9.1.13",
+    "@angular/language-service": "^9.1.13",
     "@types/jasmine": "~3.3.13",
     "@types/jasminewd2": "~2.0.6",
-    "@types/node": "~12.0.4",
-    "codelyzer": "^5.0.1",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^5.1.2",
     "coveralls": "^3.0.3",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -52,14 +53,12 @@
     "karma-coverage-istanbul-reporter": "~2.0.5",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
-    "ng-packagr": "^5.2.0",
+    "ng-packagr": "^9.0.0",
     "npm-run-all": "^4.1.5",
     "protractor": "~5.4.2",
     "rimraf": "^2.6.3",
     "ts-node": "~8.2.0",
-    "tsickle": "0.35.0",
-    "tslib": "^1.9.3",
     "tslint": "~5.17.0",
-    "typescript": "~3.4.5"
+    "typescript": "~3.8.3"
   }
 }
