upgrade to angular 10

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,7 +37,7 @@ jobs:
         run: npm run lint
 
       - name: Build
-        run: npm run copy && npm run bundle
+        run: npm run build:build
 
       - name: E2E
         run: npm run e2e
