--- a/package.json
+++ b/package.json
@@ -1,64 +1,61 @@
 {
-    "name": "ngx-sherlock-dev",
-    "version": "2.0.0",
-    "scripts": {
-        "start": "FORCE_COLOR=1 npm-run-all -l -p watch:*",
-        "watch:lib": "ng build @politie/ngx-sherlock --watch",
-        "watch:app": "sleep 10 && ng serve --open",
-        "clean": "rimraf coverage dist",
-        "build": "npm-run-all clean lint build:* e2e",
-        "build:test": "ng test @politie/ngx-sherlock --no-watch --browsers=ChromeHeadless --codeCoverage",
-        "build:build": "ng build @politie/ngx-sherlock",
-        "test": "ng test @politie/ngx-sherlock",
-        "lint": "ng lint",
-        "e2e": "ng e2e",
-        "ci:circle": "npm-run-all build",
-        "ci:travis": "npm-run-all build ci:coveralls",
-        "ci:coveralls": "cat coverage/lcov.info | node_modules/.bin/coveralls"
-    },
-    "private": true,
-    "dependencies": {
-        "@angular/animations": "^8.0.0",
-        "@angular/common": "^8.0.0",
-        "@angular/compiler": "^8.0.0",
-        "@angular/core": "^8.0.0",
-        "@angular/forms": "^8.0.0",
-        "@angular/platform-browser": "^8.0.0",
-        "@angular/platform-browser-dynamic": "^8.0.0",
-        "@angular/router": "^8.0.0",
-        "@politie/sherlock": "^2.0.0-rc.2",
-        "@politie/sherlock-proxy": "^2.0.0-rc.2",
-        "@politie/sherlock-rxjs": "^2.0.0-rc.2",
-        "core-js": "^3.1.3",
-        "rxjs": "~6.5.2",
-        "zone.js": "~0.9.1"
-    },
-    "devDependencies": {
-        "@angular-devkit/build-angular": "~0.800.0",
-        "@angular-devkit/build-ng-packagr": "~0.800.0",
-        "@angular/cli": "~8.0.1",
-        "@angular/compiler-cli": "^8.0.0",
-        "@angular/language-service": "^8.0.0",
-        "@types/jasmine": "~3.3.13",
-        "@types/jasminewd2": "~2.0.6",
-        "@types/node": "~12.0.4",
-        "codelyzer": "^5.0.1",
-        "coveralls": "^3.0.3",
-        "jasmine-core": "~3.4.0",
-        "jasmine-spec-reporter": "~4.2.1",
-        "karma": "~4.1.0",
-        "karma-chrome-launcher": "~2.2.0",
-        "karma-coverage-istanbul-reporter": "~2.0.5",
-        "karma-jasmine": "~2.0.1",
-        "karma-jasmine-html-reporter": "^1.4.2",
-        "ng-packagr": "^5.2.0",
-        "npm-run-all": "^4.1.5",
-        "protractor": "~5.4.2",
-        "rimraf": "^2.6.3",
-        "ts-node": "~8.2.0",
-        "tsickle": "0.35.0",
-        "tslib": "^1.9.3",
-        "tslint": "~5.17.0",
-        "typescript": "~3.4.5"
-    }
+  "name": "ngx-sherlock-dev",
+  "version": "2.1.0",
+  "scripts": {
+    "start": "FORCE_COLOR=1 npm-run-all -l -p watch:*",
+    "watch:lib": "ng build @politie/ngx-sherlock --watch",
+    "watch:app": "sleep 10 && ng serve --open",
+    "clean": "rimraf coverage dist",
+    "build": "npm-run-all clean lint build:* e2e",
+    "build:test": "ng test @politie/ngx-sherlock --no-watch --browsers=ChromeHeadless --codeCoverage",
+    "build:build": "ng build @politie/ngx-sherlock",
+    "test": "ng test @politie/ngx-sherlock",
+    "lint": "ng lint",
+    "e2e": "ng e2e"
+  },
+  "private": true,
+  "license": "Apache-2.0",
+  "dependencies": {
+    "@angular/animations": "^10.2.5",
+    "@angular/common": "^10.2.5",
+    "@angular/compiler": "^10.2.5",
+    "@angular/core": "^10.2.5",
+    "@angular/forms": "^10.2.5",
+    "@angular/platform-browser": "^10.2.5",
+    "@angular/platform-browser-dynamic": "^10.2.5",
+    "@angular/router": "^10.2.5",
+    "@politie/sherlock": "^3.1.0",
+    "@politie/sherlock-proxy": "^3.1.0",
+    "@politie/sherlock-rxjs": "^3.1.0",
+    "core-js": "^3.14.0",
+    "rxjs": "^6.6.7",
+    "tslib": "^2.0.0",
+    "zone.js": "^0.11.4"
+  },
+  "devDependencies": {
+    "@angular-devkit/build-angular": "~0.1002.3",
+    "@angular-devkit/build-ng-packagr": "~0.1002.3",
+    "@angular/cli": "~10.2.3",
+    "@angular/compiler-cli": "^10.2.5",
+    "@angular/language-service": "^10.2.5",
+    "@types/jasmine": "^3.7.7",
+    "@types/jasminewd2": "~2.0.6",
+    "@types/node": "^15.12.2",
+    "codelyzer": "^6.0.2",
+    "coveralls": "^3.0.3",
+    "jasmine-core": "^3.7.1",
+    "jasmine-spec-reporter": "^7.0.0",
+    "karma": "^6.3.4",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
+    "ng-packagr": "^12.0.5",
+    "npm-run-all": "^4.1.5",
+    "protractor": "~7.0.0",
+    "rimraf": "^3.0.2",
+    "ts-node": "^10.0.0",
+    "tslint": "~6.1.0",
+    "typescript": "~4.0.7"
+  }
 }
