--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
         "outDir": "./dist/out-tsc",
         "sourceMap": true,
         "declaration": false,
-        "module": "esnext",
+        "module": "es2020",
         "moduleResolution": "node",
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
@@ -31,5 +31,8 @@
                 "dist/politie/ngx-sherlock/*"
             ]
         }
+    },
+    "angularCompilerOptions": {
+        "enableIvy": false
     }
 }
