--- a/projects/politie/ngx-sherlock/package.json
+++ b/projects/politie/ngx-sherlock/package.json
@@ -1,11 +1,12 @@
 {
     "name": "@politie/ngx-sherlock",
-    "version": "2.1.0",
+    "version": "2.2.0",
     "peerDependencies": {
         "@angular/common": ">=6",
         "@angular/core": ">=6",
-        "@politie/sherlock": ">=2.0.0-rc.0",
-        "@politie/sherlock-rxjs": ">=2.0.0-rc.0"
+        "@politie/sherlock": ">=3.3.0",
+        "@politie/sherlock-proxy": ">=3.3.0",
+        "@politie/sherlock-rxjs": ">=3.3.0"
     },
     "contributors": [
         "Paco van der Linden <pavadeli@gmail.com>",
