--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,14 +16,14 @@ jobs:
       tag-name: ${{ steps.lib-bump.outputs.newTag }}
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
           # This is a public_repo Github personal access token.
           token: ${{ secrets.WORKFLOW_GITHUB_TOKEN }}
 
       - name: Bump dev-app version
         id: dev-bump
-        uses: phips28/gh-action-bump-version@v9.0.1
+        uses: phips28/gh-action-bump-version@v9.1.0
         with:
           tag-prefix: 'v'
           skip-tag: true
@@ -31,7 +31,7 @@ jobs:
 
       - name: Bump lib version
         id: lib-bump
-        uses: phips28/gh-action-bump-version@v9.0.1
+        uses: phips28/gh-action-bump-version@v9.1.0
         with:
           tag-prefix: 'v'
           commit-message: '[CI/CD]: bump lib to {{version}}'
@@ -45,7 +45,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
           ref: ${{ needs.bump-version.outputs.tag-name }}
 
@@ -61,12 +61,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
           ref: ${{ needs.bump-version.outputs.tag-name }}
 
       - name: Use node.js ${{ env.NODE_VERSION }}
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v3
         with:
           node-version: ${{ env.NODE_VERSION }}
 
@@ -76,11 +76,13 @@ jobs:
       - name: Build
         run: npm run build:ci
 
-      - name: Release
-        uses: JS-DevTools/npm-publish@v1
-        with:
+      - name: Add token to .npmrc
+        env:
           # This is a granular NPM access token with
           # "Packages and scopes" permission "Read and write"
-          # for this package only.
-          token: ${{ secrets.WORKFLOW_NPM_TOKEN }}
-          package: dist/politie/ngx-sherlock/package.json
+          # for the four sherlock packages only.
+          npmToken: ${{ secrets.WORKFLOW_NPM_TOKEN }}
+        run: echo "//registry.npmjs.org/:_authToken=$npmToken" >> .npmrc
+        
+      - name: Release
+        run: npm publish ./dist/politie/ngx-sherlock/package.json
