--- a/angular.json
+++ b/angular.json
@@ -97,11 +97,43 @@
           "options": {
             "tsConfig": [
               "src/tsconfig.app.json",
-              "src/tsconfig.spec.json"
+              "src/tsconfig.spec.json",
+              "cypress/tsconfig.json"
             ],
             "exclude": [
               "**/node_modules/**"
             ]
+          }
+        },
+        "cypress-run": {
+          "builder": "@cypress/schematic:cypress",
+          "options": {
+            "devServerTarget": "ngx-sherlock-dev:serve"
+          },
+          "configurations": {
+            "production": {
+              "devServerTarget": "ngx-sherlock-dev:serve:production"
+            }
+          }
+        },
+        "cypress-open": {
+          "builder": "@cypress/schematic:cypress",
+          "options": {
+            "watch": true,
+            "headless": false
+          }
+        },
+        "e2e": {
+          "builder": "@cypress/schematic:cypress",
+          "options": {
+            "devServerTarget": "ngx-sherlock-dev:serve",
+            "watch": true,
+            "headless": false
+          },
+          "configurations": {
+            "production": {
+              "devServerTarget": "ngx-sherlock-dev:serve:production"
+            }
           }
         }
       }
@@ -111,24 +143,45 @@
       "projectType": "application",
       "architect": {
         "e2e": {
-          "builder": "@angular-devkit/build-angular:protractor",
+          "builder": "@cypress/schematic:cypress",
           "options": {
-            "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "ngx-sherlock-dev:serve"
+            "devServerTarget": "ngx-sherlock-dev-e2e:serve",
+            "watch": true,
+            "headless": false
           },
           "configurations": {
             "production": {
-              "devServerTarget": "ngx-sherlock-dev:serve:production"
+              "devServerTarget": "ngx-sherlock-dev-e2e:serve:production"
             }
           }
         },
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "tsConfig": "e2e/tsconfig.e2e.json",
+            "tsConfig": "",
             "exclude": [
               "**/node_modules/**"
             ]
+          }
+        },
+        "cypress-run": {
+          "builder": "@cypress/schematic:cypress",
+          "options": {
+            "devServerTarget": "ngx-sherlock-dev-e2e:serve",
+            "configFile": "e2e//cypress.config.ts"
+          },
+          "configurations": {
+            "production": {
+              "devServerTarget": "ngx-sherlock-dev-e2e:serve:production"
+            }
+          }
+        },
+        "cypress-open": {
+          "builder": "@cypress/schematic:cypress",
+          "options": {
+            "watch": true,
+            "headless": false,
+            "configFile": "e2e//cypress.config.ts"
           }
         }
       }
@@ -144,13 +197,13 @@
           "options": {
             "tsConfig": "projects/politie/ngx-sherlock/tsconfig.lib.json",
             "project": "projects/politie/ngx-sherlock/ng-package.json"
-          }
-        ,          "configurations": {
+          },
+          "configurations": {
             "production": {
               "tsConfig": "projects/politie/ngx-sherlock/tsconfig.lib.prod.json"
             }
           }
-},
+        },
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
@@ -164,11 +217,45 @@
           "options": {
             "tsConfig": [
               "projects/politie/ngx-sherlock/tsconfig.lib.json",
-              "projects/politie/ngx-sherlock/tsconfig.spec.json"
+              "projects/politie/ngx-sherlock/tsconfig.spec.json",
+              "projects/politie/ngx-sherlock/cypress/tsconfig.json"
             ],
             "exclude": [
               "**/node_modules/**"
             ]
+          }
+        },
+        "cypress-run": {
+          "builder": "@cypress/schematic:cypress",
+          "options": {
+            "devServerTarget": "@politie/ngx-sherlock:serve",
+            "configFile": "projects/politie/ngx-sherlock/cypress.config.ts"
+          },
+          "configurations": {
+            "production": {
+              "devServerTarget": "@politie/ngx-sherlock:serve:production"
+            }
+          }
+        },
+        "cypress-open": {
+          "builder": "@cypress/schematic:cypress",
+          "options": {
+            "watch": true,
+            "headless": false,
+            "configFile": "projects/politie/ngx-sherlock/cypress.config.ts"
+          }
+        },
+        "e2e": {
+          "builder": "@cypress/schematic:cypress",
+          "options": {
+            "devServerTarget": "@politie/ngx-sherlock:serve",
+            "watch": true,
+            "headless": false
+          },
+          "configurations": {
+            "production": {
+              "devServerTarget": "@politie/ngx-sherlock:serve:production"
+            }
           }
         }
       }
