--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ngx-sherlock-dev",
   "version": "3.1.7",
   "scripts": {
-    "start": "FORCE_COLOR=1 npm-run-all -l -p watch:*",
+    "start": "export NODE_OPTIONS=--openssl-legacy-provider && FORCE_COLOR=1 npm-run-all -l -p watch:*",
     "watch:lib": "ng build @politie/ngx-sherlock --watch",
     "watch:app": "sleep 10 && ng serve --open",
     "clean": "rimraf coverage dist",
@@ -13,7 +13,9 @@
     "test": "ng test @politie/ngx-sherlock",
     "test:ci": "ng test @politie/ngx-sherlock --no-watch --browsers=ChromeHeadless --code-coverage",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "export NODE_OPTIONS=--openssl-legacy-provider && ng e2e",
+    "cypress:open": "cypress open --e2e --browser chrome",
+    "cypress:run": "cypress run --e2e --browser chrome"
   },
   "private": true,
   "license": "Apache-2.0",
@@ -38,10 +40,12 @@
     "@angular/cli": "~12.2.14",
     "@angular/compiler-cli": "^12.2.15",
     "@angular/language-service": "^12.2.15",
+    "@cypress/schematic": "2.4.0",
     "@types/jasmine": "~3.10.2",
     "@types/jasminewd2": "~2.0.10",
     "@types/node": "^18.6.3",
     "codelyzer": "^6.0.0",
+    "cypress": "^10.8.0",
     "jasmine-core": "^3.7.1",
     "jasmine-spec-reporter": "^7.0.0",
     "karma": "^6.3.16",
@@ -51,7 +55,6 @@
     "karma-jasmine-html-reporter": "^1.7.0",
     "ng-packagr": "^12.0.8",
     "npm-run-all": "^4.1.5",
-    "protractor": "~7.0.0",
     "rimraf": "^3.0.2",
     "ts-node": "^10.0.0",
     "tslint": "~6.1.3",
