--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,7 +43,7 @@ jobs:
         run: npm run build:build
 
       - name: Start Application
-        run: npm start & wait-on http://localhost:4200
+        run: npm start:app & wait-on http://localhost:4200
 
       - name: E2E
         run: npm run cypress:run
