Combine starting app and wait-on

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,8 +45,7 @@ jobs:
       - name: Start Application
         run: |
           npm install -g wait-on 
-          npm run start:app
-          wait-on http://localhost:4200
+          npm run start:app & wait-on http://localhost:4200
 
       - name: E2E
         run: npm run cypress:run
