--- a/package.json
+++ b/package.json
@@ -59,8 +59,7 @@
     "rimraf": "^3.0.2",
     "ts-node": "^10.0.0",
     "tslint": "~6.1.3",
-    "typescript": "~4.3.5",
-    "wait-on": "^7.2.0"
+    "typescript": "~4.3.5"
   },
   "overrides": {
     "webpack@5.50.0": "5.74.0"
