--- a/package.json
+++ b/package.json
@@ -7,14 +7,13 @@
     "watch:lib": "ng build @politie/ngx-sherlock --watch",
     "watch:app": "sleep 10 && ng serve --open",
     "clean": "rimraf coverage dist",
-    "build": "npm-run-all clean lint test:ci build:build e2e",
-    "build:ci": "npm-run-all clean lint test:ci build:prod e2e",
-    "build:build": "ng build @politie/ngx-sherlock",
+    "build:dev": "ng build @politie/ngx-sherlock",
     "build:prod": "ng build @politie/ngx-sherlock --configuration production",
     "test": "ng test @politie/ngx-sherlock",
     "test:ci": "ng test @politie/ngx-sherlock --no-watch --browsers=ChromeHeadless --code-coverage",
     "lint": "ng lint",
-    "e2e": "export NODE_OPTIONS=--openssl-legacy-provider && ng e2e",
+    "precommit": "npm-run-all clean lint test:ci build:prod precommit:e2e",
+    "precommit:e2e": "run-p start:app cypress:run",
     "cypress:open": "cypress open --e2e --browser chrome",
     "cypress:run": "cypress run --e2e --browser chrome"
   },
