--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,7 +40,7 @@ jobs:
         run: npm run lint
 
       - name: Build
-        run: npm run build:build
+        run: npm run build:prod
 
       - name: Start Application
         run: |
