Remove e2e testing from angular.json

--- a/angular.json
+++ b/angular.json
@@ -145,45 +145,12 @@
               "**/node_modules/**"
             ]
           }
-        },
-        "cypress-run": {
-          "builder": "@cypress/schematic:cypress",
-          "options": {
-            "devServerTarget": "@politie/ngx-sherlock:serve",
-            "configFile": "projects/politie/ngx-sherlock/cypress.config.ts"
-          },
-          "configurations": {
-            "production": {
-              "devServerTarget": "@politie/ngx-sherlock:serve:production"
-            }
-          }
-        },
-        "cypress-open": {
-          "builder": "@cypress/schematic:cypress",
-          "options": {
-            "watch": true,
-            "headless": false,
-            "configFile": "projects/politie/ngx-sherlock/cypress.config.ts"
-          }
-        },
-        "e2e": {
-          "builder": "@cypress/schematic:cypress",
-          "options": {
-            "devServerTarget": "@politie/ngx-sherlock:serve",
-            "watch": true,
-            "headless": false
-          },
-          "configurations": {
-            "production": {
-              "devServerTarget": "@politie/ngx-sherlock:serve:production"
-            }
-          }
         }
       }
     }
   },
   "defaultProject": "ngx-sherlock-dev",
   "cli": {
-    "packagemanager": "npm"
+    "packageManager": "npm"
   }
 }
