--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,25 +12,27 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [14.x, 16.x, 18.x]
+        node-version: [18.x, 20.x]
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - name: Use node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
 
       - name: Cache node_modules
         id: cache-modules
-        uses: actions/cache@v3
+        uses: actions/cache@v4
         with:
-          path: node_modules
+          path: |
+            node_modules
+            ~/.cache
           key: ${{ matrix.node-version }}-${{ runner.OS }}-build-${{ hashFiles('package.json') }}
 
       - name: Install
-        if: steps.cache-modules.output.cache-hit != 'true'
+        if: ${{ steps.cache-modules.outputs.cache-hit != 'true' }}
         run: npm install
 
       - name: Test
@@ -40,7 +42,12 @@ jobs:
         run: npm run lint
 
       - name: Build
-        run: npm run build:build
+        run: npm run build:prod
+
+      - name: Start Application
+        run: |
+          npm install -g wait-on 
+          npm run start:app & wait-on http://localhost:4200
 
       - name: E2E
-        run: npm run e2e
+        run: npm run cypress:run
