--- a/angular.json
+++ b/angular.json
@@ -97,35 +97,9 @@
           "options": {
             "tsConfig": [
               "src/tsconfig.app.json",
-              "src/tsconfig.spec.json"
+              "src/tsconfig.spec.json",
+              "cypress/tsconfig.json"
             ],
-            "exclude": [
-              "**/node_modules/**"
-            ]
-          }
-        }
-      }
-    },
-    "ngx-sherlock-dev-e2e": {
-      "root": "e2e/",
-      "projectType": "application",
-      "architect": {
-        "e2e": {
-          "builder": "@angular-devkit/build-angular:protractor",
-          "options": {
-            "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "ngx-sherlock-dev:serve"
-          },
-          "configurations": {
-            "production": {
-              "devServerTarget": "ngx-sherlock-dev:serve:production"
-            }
-          }
-        },
-        "lint": {
-          "builder": "@angular-devkit/build-angular:tslint",
-          "options": {
-            "tsConfig": "e2e/tsconfig.e2e.json",
             "exclude": [
               "**/node_modules/**"
             ]
@@ -144,13 +118,13 @@
           "options": {
             "tsConfig": "projects/politie/ngx-sherlock/tsconfig.lib.json",
             "project": "projects/politie/ngx-sherlock/ng-package.json"
-          }
-        ,          "configurations": {
+          },
+          "configurations": {
             "production": {
               "tsConfig": "projects/politie/ngx-sherlock/tsconfig.lib.prod.json"
             }
           }
-},
+        },
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
@@ -164,7 +138,8 @@
           "options": {
             "tsConfig": [
               "projects/politie/ngx-sherlock/tsconfig.lib.json",
-              "projects/politie/ngx-sherlock/tsconfig.spec.json"
+              "projects/politie/ngx-sherlock/tsconfig.spec.json",
+              "cypress/tsconfig.json"
             ],
             "exclude": [
               "**/node_modules/**"
@@ -176,6 +151,6 @@
   },
   "defaultProject": "ngx-sherlock-dev",
   "cli": {
-    "packagemanager": "npm"
+    "packageManager": "npm"
   }
 }
