--- a/angular.json
+++ b/angular.json
@@ -141,9 +141,10 @@
       }
     }
   },
-  "defaultProject": "ngx-sherlock-dev",
   "cli": {
     "packageManager": "npm",
-    "defaultCollection": "@angular-eslint/schematics"
+    "schematicCollections": [
+      "@angular-eslint/schematics"
+    ]
   }
 }
